--- a/radio/rild_dsda.rc
+++ b/radio/rild_dsda.rc
@@ -13,7 +13,7 @@ service ril-daemon2 /vendor/bin/hw/rild -l /vendor/lib/libsec-ril-dsda.02.so -c 
     capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
     onrestart restart cpboot-daemon
 
-service cpboot-daemon /sbin/cbd -d -p 21
+service cpboot-daemon /system/vendor/bin/cbd -d -p 21
     class main
     user root
     group radio cache inet misc audio sdcard_rw log sdcard_r
